Add homepage rendering
- Got first component rendered using Yew
- Added static files (fonts, images, js)
- Renamed `static/icons` -> `static/img`

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -1,9 +1,28 @@
-{# Static HTML goes here! #}
-
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8"/>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta name="description" content="" />
+		<meta name="author" content="" />
 		<title>DuGuo</title>
+		<link href="static/css/styles.css" rel="stylesheet" />
+		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		<link rel="icon" type="image/x-icon" href="static/img/favicon.ico" />
+		<script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
 	</head>
+	<body>
+	</body>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+	<script src="js/scripts.js"></script>
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+		AOS.init({
+			disable: 'mobile',
+			duration: 600,
+			once: true,
+		});
+	</script>
 </html>
