--- a/app/frontend/html/index.html
+++ b/app/frontend/html/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html><html><head>
 		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="">
+		<meta name="author" content="">
 		<title>DuGuo</title>
+		<link href="static/css/styles.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+		<link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
+		<script data-search-pseudo-elements="" defer="" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
 	
-<link rel="preload" href="./index-69b1b79221fbd043_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="./index-69b1b79221fbd043.js"></head>
-<body><script type="module">import init from './index-69b1b79221fbd043.js';init('./index-69b1b79221fbd043_bg.wasm');</script></body></html>
+<link rel="preload" href="/index-bcd6473e09aaebce_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/index-bcd6473e09aaebce.js"></head>
+	<body>
+	
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+	<script src="js/scripts.js"></script>
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+		AOS.init({
+			disable: 'mobile',
+			duration: 600,
+			once: true,
+		});
+	</script>
+<script type="module">import init from '/index-bcd6473e09aaebce.js';init('/index-bcd6473e09aaebce_bg.wasm');</script></body></html>
