--- a/app/frontend/html/index.html
+++ b/app/frontend/html/index.html
@@ -10,13 +10,12 @@
 		<link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
 		<script data-search-pseudo-elements="" defer="" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
 	
-<link rel="preload" href="/index-52d1a55b1533a487_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/index-52d1a55b1533a487.js"></head>
+<link rel="preload" href="/index-4e0360f883687be1_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/index-4e0360f883687be1.js"></head>
 	<body>
 	
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-	<script src="static/js/scripts.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script>
 		AOS.init({
@@ -25,4 +24,4 @@
 			once: true,
 		});
 	</script>
-<script type="module">import init from '/index-52d1a55b1533a487.js';init('/index-52d1a55b1533a487_bg.wasm');</script></body></html>
+<script type="module">import init from '/index-4e0360f883687be1.js';init('/index-4e0360f883687be1_bg.wasm');</script></body></html>
