--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -7,9 +7,9 @@
 		<meta name="description" content="" />
 		<meta name="author" content="" />
 		<title>DuGuo</title>
-		<link href="static/css/styles.css" rel="stylesheet" />
+		<link href="/static/css/styles.css" rel="stylesheet" />
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-		<link rel="icon" type="image/x-icon" href="static/img/favicon.ico" />
+		<link rel="icon" type="image/x-icon" href="/static/img/favicon.ico" />
 		<script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
