Add frontend updates
Still working through, though this compiles with `trunk build`

Added initial implementation for CnPhrase <span> objects

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -11,7 +11,9 @@
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="icon" type="image/x-icon" href="/static/img/favicon.ico" />
 		<script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
-	</head>
+        <!-- TODO: Add `onhashchange` event to <body> for hash handling, add js script as well-->
+            <!-- This needs to happen in the <body> tag - not supported otherwise -->
+    </head>
 	<body>
 	</body>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
