Update to <ruby> tags to allow inline <span>s

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -13,6 +13,11 @@
 		<script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
         <!-- TODO: Add `onhashchange` event to <body> for hash handling, add js script as well-->
             <!-- This needs to happen in the <body> tag - not supported otherwise -->
+        <style>
+            rt {
+                font-size: 1rem
+            }
+        </style>
     </head>
 	<body>
 	</body>
